--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,14 +32,9 @@ jobs:
           command: |
             sudo pip install pipenv
             pipenv install
-      - save_cache:
-          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
-          paths:
-            - ".venv"
-            - "/usr/local/bin"
-            - "/usr/local/lib/python3.6/site-packages"
       - run:
           command: |
+            export MONGO_URI=mongodb://localhost:27017/database
             pipenv run python app.py test
       - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: test-results
