--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,18 +26,19 @@ jobs:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
-      - restore_cache:  # ensure this step occurs *before* installing dependencies
-          key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
       - run:
           command: |
-            sudo pip install pipenv
-            pipenv install
+            sudo pip install virtualenv
+            sudo pip install tox
       - run:
           command: |
+            virtualenv -p python3 .venv
+            source .venv/bin/activate
+            pip install -r requirements.txt
+            mkdir test-results
             export MONGO_URI=mongodb://localhost:27017/database
-            pipenv run python app.py test
+      - run:
+          command: |
+            python -m unittest
       - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: test-results
-      - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: test-results
-          destination: tr1
+          path: /test/test-results
