--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,6 @@ jobs:
         auth:
           username: mydockerhub-user
           password: $DOCKERHUB_PASSWORD
-    dependencies:
-      override:
-        - pip install tox tox-pyenv
-        - pyenv local 2.7.12 3.4.3 3.5.2 3.6.3
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
@@ -37,7 +33,8 @@ jobs:
       - run:
           name: Installing virutalenv and tox ⚡️⚡️⚡️
           command: |
-            sudo pip install virtualenv
+            sudo pip install virtualenv tox tox-pyenv
+            pyenv local 2.7.12 3.4.3 3.5.2 3.6.3
       - run:
           name: Workspace getting ready... 🎨
           command: |
