--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,17 +27,9 @@ jobs:
       - run: sudo chown -R circleci:circleci /usr/local/bin
       - run: sudo chown -R circleci:circleci /usr/local/lib/python3.6/site-packages
       - run:
-          name: Installing virutalenv and tox ⚡️⚡️⚡️
+          name: Installing tox ⚡️⚡️⚡️
           command: |
-            sudo pip install virtualenv
             sudo pip install tox
-      - run:
-          name: Workspace getting ready... 🎨
-          command: |
-            virtualenv -p python3 .venv
-            source .venv/bin/activate
-            pip install -r requirements.txt
-            export MONGO_URI=mongodb://localhost:27017/database
       - run:
           name: Launch tests 🔥🔥
           command: |
