--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,16 +12,16 @@ jobs:
     working_directory: ~/the-real-devops-challenge
     docker:
       - image: circleci/python:3.6.4  # primary container for the build job
-#        auth:
-#          username: mydockerhub-user
-#          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
-#        environment:
-#          PIPENV_VENV_IN_PROJECT: true
-#          DATABASE_URL: mongodb://localhost:27017/database
-#      - image: mongo:4.4.6
-#        auth:
-#          username: mydockerhub-user
-#          password: $DOCKERHUB_PASSWORD
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+        environment:
+          PIPENV_VENV_IN_PROJECT: true
+          DATABASE_URL: mongodb://localhost:27017/database
+      - image: mongo:4.4.6
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
@@ -35,4 +35,4 @@ jobs:
       - run:
           name: Launch tests 🔥🔥
           command: |
-            tox
+            docker run -it -v $(pwd):/tmp/app -w /tmp/app --rm painless/tox /bin/bash tox
