--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,6 @@ orbs:
           name: Launch tests 🔥🔥
           command: |
             tox
-
   jobs:
     py27:
       <<: *ci
@@ -41,3 +40,11 @@ orbs:
       <<: *ci
       docker:
           - image: circleci/python:3.6
+  workflows:
+    version: 2
+    test:
+      jobs:
+        - py27
+        - py34
+        - py35
+        - py36
