--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,6 @@ jobs:
         auth:
           username: mydockerhub-user
           password: $DOCKERHUB_PASSWORD
-    dependencies:
-      override:
-        - sudo pip install tox tox-pyenv
-        - sudo pyenv local 2.7.12 3.4.0 3.5.0 3.6.4
     steps:
       - checkout
       - run: sudo chown -R circleci:circleci /usr/local/bin
@@ -34,6 +30,8 @@ jobs:
           name: Installing requirements ⚡️⚡️⚡️
           command: |
             sudo apt-get update
+            sudo pip install tox tox-pyenv
+            sudo pyenv local 2.7.12 3.4.0 3.5.0 3.6.4
             pip3 install -r requirements.txt
       - run:
           name: Launch tests 🔥🔥
