--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,8 +30,7 @@ jobs:
           name: Installing requirements ⚡️⚡️⚡️
           command: |
             sudo apt-get update
-            sudo pip install tox tox-pyenv
-            sudo pyenv local 2.7.12 3.4.0 3.5.0 3.6.4
+            sudo pip install tox
             pip3 install -r requirements.txt
       - run:
           name: Launch tests 🔥🔥
