--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = py27,py34,py35,py36
+envlist = py36
 skipsdist=True
 
 [testenv]
 deps = -rrequirements_dev.txt
 commands=pytest
-setenv = MONGO_URI=mongodb://localhost:27017/database
+setenv = MONGO_URI=mongodb://test
